# libmusic_py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: lm_dual_tone_noise_example.py  lm_single_tone_noise_example.py
src/libmusic_py/: libmusic_py.py
tests/: dual_tone_freq_noise.py  single_tone_freq_noise.py  test_etsi.py  test_etsi_valid.py  test_etsi_valid_2.py  todo.md
