[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libmusic_py"
version = "0.0.1"
authors = [{ name = "Trevor Clark" }]
description = "Spectral methods based on signal space decomposition"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "spectrum=0.8.1", "matplotlib"]

[project.urls]
Homepage = "https://github.com/tkuraku/libmusic_py"
Issues = "https://github.com/tkuraku/libmusic_py/issues"
